# aeolus

./: AUTHORS  CMakeLists.txt  COPYING  INSTALL  README
source/: addsynth.cpp  addsynth.h  asection.cpp  asection.h  audio.cpp  audio.h  division.cpp  division.h  exp2ap.cpp  global.h  iface.h  imidi.cpp  imidi.h  lfqueue.cpp  lfqueue.h  messages.cpp  messages.h  model.cpp  model.h  prbsgen.h  rankwave.cpp  rankwave.h  reverb.cpp  reverb.h  rngen.cpp  rngen.h  scales.h  slave.cpp  slave.h
